--- a/services.html
+++ b/services.html
@@ -30,45 +30,50 @@
 <section>
 <div class="sections">
     <table>
-        <tr><td class="text-center">Эпиляция</td><td class="text-right">(воск/сахар)</td></tr>
+        <tr><td class="text-center">Депиляция</td><td class="text-right">(воск/сахар)</td></tr>
         <tr><td> </td><td class="text-right">Руб.</td></tr>
         <tr><td>Руки до локтя</td><td class="text-right">300/400</td></tr>
         <tr><td>Руки полностью</td><td class="text-right">400/500</td></tr>
-        <tr><td>Ноги до колен</td><td class="text-right">500/600</td></tr>
+        <tr><td>Ноги до колена</td><td class="text-right">500/600</td></tr>
         <tr><td>Ноги полностью</td><td class="text-right">900/1100</td></tr>
         <tr><td>Подмышечные впадины</td><td class="text-right">-/300</td></tr>
         <tr><td>Классическое бикини</td><td class="text-right">-/400</td></tr>
         <tr><td>Ягодицы</td><td class="text-right">-/700</td></tr>
         <tr><td>Живот</td><td class="text-right">200/300</td></tr>
         <tr><td>Лицо</td><td class="text-right">-/150</td></tr>
-        <tr><td>Ноги полностью<br>+бикини глубокое <br>
-            +подмышечные впадины <br>
-            +дизайн бикини</td><td class="text-right">-/1800</td></tr>
-        <tr><td>Бикини глубокое<br>+подмышечные впадины<br> +ноги до колена<br>
-            +дизайн бикини </td><td class="text-right">-/1300</td></tr>
+        <tr><td>Глубокое бикини</td><td class="text-right">800</td></tr>
+        <tr><td>Комплекс 1 (гб.бикини + подмышки + ноги полностью)</td><td class="text-right">1900</td></tr>
+        <tr><td>Комплекс 2 (гб.бикини + подмышки + ноги до колена)</td><td class="text-right">1500</td></tr>
     </table>
 </div>
 <div class="sections">
     <table>
         <tr><td class="text-center">Очищение кожи</td><td></td></tr>
         <tr><td> </td><td>Руб.</td></tr>
-        <tr><td>Ультрозвуковая чистка лица</td><td class="text-right">600</td></tr>
-        <tr><td>Механическая (мануальная) чистка лица</td><td class="text-right">1000</td></tr>
-        <tr><td>Комбинированная чистка лица (УЗИ=мех.чистка)</td><td class="text-right">1250</td></tr>
+        <tr><td>Ультрозвуковая чистка лица</td><td class="text-right">700</td></tr>
+        <tr><td>Вакуумная чистка лица</td><td class="text-right">700</td></tr>
+        <tr><td>Механическая (мануальная) чистка лица</td><td class="text-right">1200</td></tr>
+        <tr><td>Комбинированная чистка лица</td><td class="text-right">1500</td></tr>
+        <tr><td>Алмазная шлифовка кожи</td><td class="text-right">1200</td></tr>
+        
         <tr><td>Пилинги</td></tr>
+        <tr><td>Аквапилинг кожи</td><td class="text-right">1200</td></tr>
+        <tr><td>Миндальный пилинг 40%</td><td class="text-right">1000</td></tr>
         <tr><td>Миндальный пилинг 40%</td><td class="text-right">1000</td></tr>
         <tr><td>Гликолевый пилинг 30%,50%,60%</td><td class="text-right">800</td></tr>
         <tr><td>Салициловый пилинг 15%,25%</td><td class="text-right">800</td></tr>
         <tr><td>Пилинг "Биоматрикс лакто 45%"</td><td class="text-right">1000</td></tr>
         <tr><td>Энзимный пилинг</td><td class="text-right">700</td></tr>
+        <tr><td>Поверхностные химические пилинги</td><td class="text-right">от 1000</td></tr>
+        <tr><td>Срединные химические пилинги</td><td class="text-right">от 2000</td></tr>
     </table>
 </div>
 <div>
     <div class="sections"><table>
         <tr><td class="text-center">Уходовые программы</td></tr>
         <tr><td> </td><td>Руб.</td></tr>
-        <tr><td>Карбокситерапия CO2<br>
-            для сухой и возрастной кожи</td><td class="text-right">1500</td></tr>
+        <tr><td>Неинвазивная биоревитализация</td><td class="text-right">1500</td></tr>
+        <tr><td>Карбокситерапия</td><td class="text-right">1500</td></tr>
         <tr><td>Деликатное осветление<br>
             (очищение,тонизация,пилинг,<br>
             осветляющий концентрат,<br>
@@ -76,18 +81,16 @@
         <tr><td>Интенсивное увлажнение<br>
             (очищение,тонизация,<br>
             введение сыворотки <br> с гиалуроновой кислотой,маска,крем)</td><td class="text-right">1500</td></tr>
-        <tr><td>Anti-age
-            (очищение,тонизация,пилинг,<br>
-            массаж,альгинатная маска,крем)</td><td class="text-right">1300</td></tr>
+        <tr><td>Anti-age (очищение,тонизация,пилинг,<br> массаж,альгинатная маска,крем)</td><td class="text-right">1300</td></tr>
     </table>
     </div>
 
     <div class="sections margin-table"><table>
-        <tr><td class="text-center">Оформление бровей</td></tr>
+        <tr><td class="text-center">Депиляция</td></tr>
         <tr><td> </td><td>Руб.</td></tr>
-        <tr><td>Коррекция</td><td class="text-right">200</td></tr>
-        <tr><td>Окрашивание</td><td class="text-right">400</td></tr>
-        <tr><td>Коррекция+окрашивание</td><td class="text-right">500</td></tr>
+        <tr><td>Глубокое бикини</td><td class="text-right">800</td></tr>
+        <tr><td>Комплекс 1 (гб.бикини + подмышки + ноги полностью)</td><td class="text-right">1900</td></tr>
+        <tr><td>Комплекс 2 (гб.бикини + подмышки + ноги до калена)</td><td class="text-right">1500</td></tr>
     </table>
     </div>
 </div>
