Изменила информацию на сайте

--- a/index.html
+++ b/index.html
@@ -48,11 +48,11 @@
 
             <div class="rectangle">
                 <div class="links">
-                    <a class="link text-decoration-none" href="Services.html"> Услуги и цены
+                    <a class="link text-decoration-none" href="/services.html"> Услуги и цены
                     </a>
-                    <a class="link text-decoration-none" href="Certificates.html"> Дипломы и сертификаты
+                    <a class="link text-decoration-none" href="/Certificates.html"> Дипломы и сертификаты
                     </a>
-                    <a class="link text-decoration-none" href="Reviews.html"> Отзывы
+                    <a class="link text-decoration-none" href="/Reviews.html"> Отзывы
                     </a>
                     <a class="text-decoration-none" href="#contacts"> Контакты
                     </a>
@@ -101,19 +101,19 @@
                     <button class="burger">
                         <div class="burger-menu close-burger-menu">
                             <div class="part-of-menu">
-                                <a class="burger-links text-decoration-none" href="Services.html"> Услуги и цены</a>
+                                <a class="burger-links text-decoration-none" href="/services.html"> Услуги и цены</a>
                             </div>
                             <div class="black-line">
                             </div>
                             <div class="part-of-menu">
-                                <a class="burger-links text-decoration-none line-height" href="Certificates.html">
+                                <a class="burger-links text-decoration-none line-height" href="/Certificates.html">
                                     Дипломы и
                                     сертификаты</a>
                             </div>
                             <div class="black-line">
                             </div>
                             <div class="part-of-menu">
-                                <a class="burger-links text-decoration-none" href="Reviews.html"> Отзывы</a>
+                                <a class="burger-links text-decoration-none" href="/Reviews.html"> Отзывы</a>
                             </div>
                             <div class="black-line">
                             </div>
@@ -200,7 +200,7 @@
 
         <div class="container">
             <div>
-                <img class="Photo-1" src="pictures/Photo-1.png" alt="photo">
+                <img class="Photo-1" src="pictures/Photo-1.webp" alt="photo">
             </div>
             <div class="Orange">
                 <div class="paddind-div">
