--- a/index.html
+++ b/index.html
@@ -9,13 +9,19 @@
     <link href="https://fonts.googleapis.com/css?family=Gabriela&display=swap" rel="stylesheet">
     <link rel="preload" href="fonts/MPLUSRounded1c-Regular.ttf" as="font" type="font/ttf">
     <link rel="preload" href="fonts/MPLUSRounded1c-Bold.ttf" as="font" type="font/ttf">
-    <link rel="icon" type="image/x-icon" href="favicon.ico">
-    <meta name="description" content="Эстетик студия Лесиной Нателы оказывает услуги в области косметологии и эпиляции.
+    <link rel="apple-touch-icon" sizes="76x76" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
+    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="theme-color" content="#ffffff">
+    <meta name="description" content="Эстетик студия Лесиной Нателы оказывает услуги в области косметологии и депиляции.
 Специалисты с высшим медецинским образованием подберет необходимые процедуры для Вашего типа кожи,
 а также поможет быстро и качественно избавиться от нежелательных волос на теле.">
 
     <meta property="og:url" content="https://cosmetology40.ru">
-    <meta property="og:title" content="Косметология и эпиляция">
+    <meta property="og:title" content="Косметология и депиляция">
     <meta property="og:description" content="Эстетик студия Лесиной Нателы">
 
     <meta charset="UTF-8">
@@ -35,7 +41,8 @@
         });
     </script>
     <noscript>
-        <div><img src="https://mc.yandex.ru/watch/64766413" style="position:absolute; left:-9999px;" alt="noimg" /></div>
+        <div><img src="https://mc.yandex.ru/watch/64766413" style="position:absolute; left:-9999px;" alt="noimg" />
+        </div>
     </noscript>
     <!-- /Yandex.Metrika counter -->
 </head>
@@ -59,7 +66,7 @@
                 </div>
                 <p class="text-center text-estetic">Эстетик Студия</p>
                 <h1 class="text-center text-Nata"> Лесиной Нателы</h1>
-                <p class="text-center text-cosmetology">Косметология и эпиляция</p>
+                <p class="text-center text-cosmetology">Косметология и депиляция</p>
                 <div class="button-center">
                     <button class="button-style sing-up first-button show-call-me">
                         <p>Записаться
@@ -68,7 +75,7 @@
                 </div>
             </div>
 
-
+            <img src="./favicon.png" class="favicon" alt="favicon">
             <img src="./pictures/Nata.png" class="first-path-img" alt="photo-girl">
 
             <div class="all-contacts">
@@ -147,7 +154,7 @@
 
                     <p class="text-center text-cosmetology
                     text-cosmetology-tablet text-cosmetology-mobile">
-                        Косметология и эпиляция
+                        Косметология и депиляция
                     </p>
 
                     <div class="button-center">
@@ -173,7 +180,8 @@
                 </div>
                 <div class="invisible-rectangle">
                     <div>
-                        <img class="margin-advantages padding-advantages" src="pictures/Advantage-2.png" alt="icon-advantages">
+                        <img class="margin-advantages padding-advantages" src="pictures/Advantage-2.png"
+                            alt="icon-advantages">
                         <p class="margin-p">Профессиональная косметика</p>
                     </div>
                 </div>
@@ -185,7 +193,8 @@
                 </div>
                 <div class="invisible-rectangle">
                     <div>
-                        <img class="margin-advantages padding-advantages" src="pictures/Advantage-4.png" alt="icon-advantages">
+                        <img class="margin-advantages padding-advantages" src="pictures/Advantage-4.png"
+                            alt="icon-advantages">
                         <p class="margin-p">Удобное расположение в центре города</p>
                     </div>
                 </div>
@@ -242,7 +251,7 @@
                     Уходовые программы
                 </p>
                 <p class="margin-p-services">
-                    Пиллинги Эпиляция (воск/сахар)
+                    Пилинги и депиляция (воск/сахар)
                 </p>
                 <p class="margin-p-services">
                     Оформление и окрашивание бровей
