поменяла цвета ссылок, вставила инфу про студию

--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@
 
         <footer class="footer">
             <p class="footer-p">
-                © Natela Lesina, 2021
+                Сделано в <a href="https://solidas.ru/?from=cosmetology" class="footer__link--solidas">Solidas</a>
             </p>
             <div class="button-center">
                 <a href="https://vk.com/id51435042">
