добавление ссылок в footer

--- a/Certificates.html
+++ b/Certificates.html
@@ -69,13 +69,18 @@
             </button>
         </div>
 
-    <footer>
+    <div>
         <div class="button-center margin-sing-up-small">
             <button class="button-style button-style-tablet sing-up show-call-me">
                 <p class="p-tablet">Записаться
                 </p>
             </button>
         </div>
+    </div>
+    <footer>
+        <p class="footer-p footer-p__additional-pages">
+            Сделано в <a href="https://solidas.ru/?from=cosmetology" class="footer__link--solidas">Solidas</a>
+        </p>
     </footer>
     <div class="pop-up">
         <div class="form">
